--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ sidebar:
   title: "Rebooting the Web of Trust"
   nav: "rwotnav"
 header:
-  image: /assets/images/rebooting-the-web-of-trust-heading.jpg
+  image: /assets/images/rebooting-the-web-of-trust-heading.jpeg
 ---
